# naver-land-personal-parser

./: plan.md  pyproject.toml
.github/: dependabot.yml
src/nland/: cli.py  client.py  db.py  formatter.py  interactive.py  models.py
tests/: factories.py  test_cli.py  test_client.py  test_db.py  test_formatter.py  test_interactive.py  test_models.py
