[project]
name = "naver-land-personal-parser"
version = "0.1.0"
description = "Personal Naver Land parser for Sejong Jiphyeon-dong apartment sales"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nland"]

[tool.pytest.ini_options]
testpaths = ["tests"]
