[project]
name = "naver-land-personal-parser"
version = "0.1.0"
description = "Personal Naver Land parser for Sejong Jiphyeon-dong apartment sales"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nland"]

[tool.pytest.ini_options]
testpaths = ["tests"]
